Version 6.0.5
- fixed memory leak in server when calling stored procedure with output parameter many times 
  in the same session (bug#36027)
- workaround for .NET compact framework problems when writing behind the end of MemoryStream 
(contributed by Nicholas Piasecki) (bug#43736)
- added keepalive connection option that can be used to detect network outages faster 
  and prevent firewalls from dropping idle connections (bug#40684)
- fixed bug where our internal driver was using a batched command even if the user had added
  'allow batch=false' to their connection string (bug #45502)
- we are now throwing an exception when DeriveParameters is unable to successfully populate
  the parameters array.  This exception explains what is wrong (bug #45952)  
- fixed potential infinite loop in LoadPacket(), when read from a stream returns 0. (bug#46308)
- fixed bug where editing a table and giving a size based type that is different than
  the default (i.e. varchar(20)) would cause other columns that have the default
  to fail (bug #46100)
- fixed mono compilation by removing the space delimited warning list from the project file
  and including a solution that builds with MonoDevelop 2.0. (bug #42411)
- fixed 'can't find svctag.xml' installer bug (thanks Iggy!)  (bug #45474)
- fixed DbSkipExpression so that it would respect any sort clauses that are attached
  (thanks Lynn!) (bug #45723)
- fixed bug that caused our TIME type to not be supported (bug #45457)
- fixed unsigned type problems with entity framework (bug #45077)  
- fixed formatting of single, double, and decimal values when used with entity framework
  in cultures that use the comma as a decimal separator (bug #44455)  
- fixed GetSByte method to actually return an sbyte  (bug #46620)
- fixed timestamp columns with entity framework (bug #46311)  
- fixed sql generation bug with table editor. This bug would cause the data type
  to be repeated in some cases when a table was altered.  